# internal/docs/swagger.yaml
@@ -219,18 +219,6 @@ definitions:
     - kind
     - name
     type: object
-  instruments.CreateQuestionnaireRequest:
-    properties:
-      name:
-        maxLength: 160
-        minLength: 2
-        type: string
-      schema:
-        type: object
-    required:
-    - name
-    - schema
-    type: object
   instruments.InstrumentResponse:
     properties:
       config:
@@ -247,27 +235,6 @@ definitions:
         type: string
       project_id:
         type: string
-      status:
-        type: string
-      updated_at:
-        type: string
-      version:
-        type: integer
-    type: object
-  instruments.QuestionnaireResponse:
-    properties:
-      created_at:
-        type: string
-      created_by:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-      project_id:
-        type: string
-      schema:
-        type: object
       status:
         type: string
       updated_at:
@@ -2030,154 +1997,6 @@ paths:
       summary: Get participant by code
       tags:
       - Participants
-  /projects/{id}/questionnaires:
-    get:
-      description: List questionnaire versions in a project
-      parameters:
-      - description: Project ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Questionnaire ID
-        in: path
-        name: questionnaireID
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/instruments.QuestionnaireResponse'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: List questionnaires
-      tags:
-      - Questionnaires
-    post:
-      consumes:
-      - application/json
-      description: Create a questionnaire schema for a project
-      parameters:
-      - description: Project ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Questionnaire payload
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/instruments.CreateQuestionnaireRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/instruments.QuestionnaireResponse'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "422":
-          description: Unprocessable Entity
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Create questionnaire
-      tags:
-      - Questionnaires
-  /projects/{id}/questionnaires/{questionnaireID}/publish:
-    post:
-      description: Publish a questionnaire version for active use
-      parameters:
-      - description: Project ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Questionnaire ID
-        in: path
-        name: questionnaireID
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/instruments.QuestionnaireResponse'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Publish questionnaire
-      tags:
-      - Questionnaires
 schemes:
 - http
 - https
